# easyfile

./: .gitignore  README.md  backend.py  copy_test_1.py  poetry.toml  pyproject.toml
backend/: helpers.py  operations.py
easyfile/backend/: __init__.py  exceptions.py  helpers.py  operations.py
garbage/: async_try_2.py  copy_try_2.py  create_test_files.py  hash_try.py
tests/: test  test_backend.py
tries/: async_test_1.py  decorator_try.py  hash_test.py
