[tool.poetry]
name = "easyfile"
version = "0.1.0"
description = "Simple file manager with backend asynchronous functions."
authors = ["jiri.one <jiri1@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofile = "^3.8.1"

[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "easyfile"
testpaths = "tests"
asyncio_mode = "auto"
